2019-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/Rcpp/Reference.h: Shield Rf_mkstring inside Rf_lang2
2019-10-31  Romain Francois  <romain@rstudio.com>
	
	* inst/include/Rcpp/DataFrame.h: Protect temporaries from gc
	* inst/include/Rcpp/Environment.h: Idem
	* inst/include/Rcpp/r_cast.h: Idem

2019-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/unitTests/runit.exposeClass.R: Updated to pass with r-devel

2019-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-package.Rnw: Another wrapper
	* vignettes/Rcpp-jss-2011.Rnw: Idem

	* vignettes/Makefile: Refinements 
	* vignettes/rmd/Makefile: Idem

	* cleanup: Removed bashism, added invocation of make clean

2019-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-*.Rnw: Wrappers around pdf/*pdf
	* vignettes/Makefile: Added

2019-10-21  Dirk Eddelbuettel  <edd@debian.org>
	
	* vignettes/rmd/*: Moved from parent directory
	* vignettes/pdf/*: New target directory

2019-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/Rcpp-FAQ.Rmd: Turn off knitr cache
	* vignettes/Rcpp-introduction.Rmd: Idem

	* vignettes/Makefile: Add simple Makefile
	* .Rbuildignore: Exclude vignettes/Makefile

2019-10-19  Stephen Wade  <stephematician@gmail.com>

	* inst/include/Rcpp/XPtr.h: XPtr constructor split up, a single
	argument does not modify tags and protected data of the external pointer
	* inst/unitTests/cpp/Xptr.cpp: Added test
	* inst/unitTests/runit.XPtr.R: Idem

2019-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added CRAN + BioConductor badges for reverse depends,

2019-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/exceptions.h: Condition use of typeid() on
	absence of RCPP_NO_RTTI in two places
	* inst/include/Rcpp/r/headers.h: RCPP_NO_RTTI implies RCPP_NO_MODULES
